--- a/public/index.css
+++ b/public/index.css
@@ -572,6 +572,14 @@ video {
   margin-top: 2.5rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .mb-32 {
   margin-bottom: 8rem;
 }
