--- a/public/global.css
+++ b/public/global.css
@@ -61,3 +61,11 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+nav a:visited{
+	color:#F8E0D4;
+}
+
+.dark nav a:visited{
+	color:white;
+}
