--- a/public/global.css
+++ b/public/global.css
@@ -12,18 +12,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
 
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
 
 label {
 	display: block;
@@ -62,20 +51,54 @@ button:focus {
 	border-color: #666;
 }
 
-nav a:visited{
-	color:#F8E0D4;
-}
-
-.dark nav a:visited{
-	color:white;
-}
-
 .landing-hero {
 	background-image: url('/home-drinks.png')  !important;
 }
 
 .dark .landing-hero {
 	background-image: url('/playa-landing-hero.png')  !important;
+}
+
+#drinks-section img:first-child {
+	display: none  !important;
+}
+
+.dark #drinks-section img:first-child {
+	display: block  !important;
+}
+
+.dark #drinks-section img:nth-child(2) {
+	display: none !important;
+}
+
+#drinks-section img:nth-child(2) {
+	display: block !important;
+}
+
+#drinks-section img:first-child {
+	display: none  !important;
+}
+
+.dark #drinks-section img:first-child {
+	display: block  !important;
+}
+
+.dark #drinks-section img:nth-child(2) {
+	display: none !important;
+}
+
+#drinks-section img:nth-child(2) {
+	display: block !important;
+}
+
+
+
+#drinks-section img {
+	background-image: url('/drinks-menu-light.png')  !important;
+}
+
+.dark #drinks-section img {
+	background-image: url('/drinks-menu.png')  !important;
 }
 
 .wave-1 {
@@ -87,4 +110,12 @@ nav a:visited{
 }
 .dark .wave-2 {
 	display: none;
+}
+
+aside {
+	background: linear-gradient(180deg, #FBEEE6 0%, #FFFFFF 100%);
+}
+
+.dark aside {
+	background: #262830 !important; 
 }
